@@ -3540,7 +3540,7 @@ pillage.</p>
       <p>This command is used to
 set one of the internal quest
 variables. These variables can be one of the standard Quest settings,
-such as: "CLASS", "NAME", "DURATION", "WAIT", "MINPLAYERS",
+such as: "CLASS", "NAME", "DURATION", "WAIT", "MINPLAYERS", "REMAINING",
 "PLAYERMASK", "RUNLEVEL", "DATE", "MUDDAY", or "INTERVAL". More
 commonly though, they are user-defined variables which are only
 available for the duration of the quest, and reset each time the quest
@@ -4782,7 +4782,7 @@ value)</span>
 one of the official or user-defined
 quest variables. User-defined quest variables are defined using MPQSET.
 Official variables names include: "CLASS", "NAME", "DURATION", "WAIT",
-"MINPLAYERS", "PLAYERMASK", "RUNLEVEL", "DATE", "MUDDAY", or
+"MINPLAYERS", "PLAYERMASK", "RUNLEVEL", "DATE", "MUDDAY", "REMAINING", or
 "INTERVAL". &nbsp;Official object variables include: "AREA",
 "MOBTYPE",
 "MOBGROUP", "ITEMTYPE", "LOCALE", "ROOM", "MOB", "ITEM", "ITEMGROUP",
