@@ -205,11 +205,13 @@ Makes a weapon or mob incapable of doing any real damage.
 PROP_DOPPLEGANGER=\
 Property   : Prop_Doppleganger\n\r\
 Targets    : Mobs, Items\n\r\
-Parameters : nothing, a level change + or -, a level %, or MAX/MIN parms\n\r\
+Parameters : nothing, a level change + or -, a level %, or\n\r\
+           : MIN=[NUM], MAX=[NUM], LEVELADD=[NUM], LEVELPCT=[PCT%],\n\r\
+           : PLAYERSONLY=[true/false], PLAYERSNFOLS=[true/false]\n\r\
 Example    : \n\r\
 Example    : 10\n\r\
 Example    : 150%\n\r\
-Example    : MAX=20 MIN=5\n\r\
+Example    : MAX=20 MIN=5 LEVELADD=0 LEVELPCT=100% PLAYERSONLY=false\n\r\
 Description: \n\r\
 When this property is on a mob, it makes the mob the same level as those in the \
 room with it, or as those who are fighting it.  The mob will only change, however, \
@@ -217,8 +219,12 @@ if the mob is at full hit points, to prevent mobs from being "softened up". \
 When the property is on armor or \
 a weapon, it will adjust the strength and level of the item appropriate to its owner.\n\r\
 \n\r\
-A parameter may be given to always adjust the level of the item up or down from normal. 
-
+A parameter may be given to always adjust the level of the item up or down from normal, \
+be multiplied by the level as a percentage, or a number of parameter variables like: \
+MIN to set a minimum level, MAX to set a maximum level, LEVELADD to add a fixed number \
+to the level, LEVELPCT to multiply a percentage by the level, PLAYERSONLY to limit \
+the level calculating mobs to players only, or PLAYERSNFOLS to limit the level \
+calculating mob to players or their followers only.
 
 PROP_LANGTRANSLATOR=\
 Property   : Prop_LangTranslator\n\r\
